# midi-to-hex

./: .gitignore  ByteStream.cpp  ByteStream.h  CMakeLists.txt  Makefile  NoteListProcessor.cpp  NoteListProcessor.h  README.md  ScoreDataDownload.cpp  ScoreDataDownload.h  make-and-download.sh  midi-to-hex  midi-to-hex.cpp  midiFilieList.txt  scorelist.mps
Intel-HEX-Class/intelhex_class/: intelhexclass.cpp
hex-file/: mg.hex  mg_167.hex  mg_m328p.hex
libusb/: .gitignore
micronucleus_tool/: Makefile  micronucleus.c
midi-sample/: Beethoven_-_Pathetique__Piano_Sonate_8._2nd_Mov._for_Flute_and_Piano (1).mid  Chris De Burgh - Lady In Red.mid  GoingHome.mid  Rush_B.mid  tchaikovsky_nutcracker_suite_march_71a_2_(c)kirschbaum.mid
music-box-firmware/: .mg.asm.swp  Makefile  mel.txt  mel1.txt  mel2.txt  mel2asm.pl  melody.asm  mg.asm  mg.hex  mg_167.asm  mg_167.hex  mg_lgt8f328p.asm  mg_m328p.asm  mg_m328p.hex  wav2asm.pl  wavetable_8bit_square.inc  wavetable_celesta.inc  wavetable_flute.inc  wavetable_original_musicbox.inc  wavetable_piano.inc  wavetable_string.inc
music-box-firmware/lgt8f328p_udsu/: dsu_def.inc  lgt8f328p_udsu.aps  lgt8f328p_udsu.aws  lgt8f328p_udsu.c  lgt8f328p_udsu.h  udsu_api.s
serialport/: Serial.cpp  Serial.h
