cmake_minimum_required (VERSION 2.6)
project (midi-to-hex)
set(CMAKE_C_FLAGS "-Os -std=c99")
set(CMAKE_CXX_FLAGS "-Os -std=c++11")

if(WIN32)
ADD_DEFINITIONS(-D WIN)
LINK_DIRECTORIES(./libusb/MinGW64/static/)
endif()
if(APPLE)
INCLUDE_DIRECTORIES(/usr/local/Cellar/libusb/1.0.20/include)
ADD_DEFINITIONS(-D MAC_OS)
endif()
if(UNIX AND NOT APPLE)
ADD_DEFINITIONS(-D LINUX)
endif()


aux_source_directory(./midifile/src-library DIR_MIDI_LIB_SRCS)
aux_source_directory(./Intel-HEX-Class/intelhex_class DIR_HEX_LIB_SRCS)
aux_source_directory(./micronucleus_tool DIR_MICRONUCLEUS_SRCS)
aux_source_directory(./micronucleus_tool/library DIR_MICRONUCLEUS_LIB_SRCS)
aux_source_directory(./bprinter/src DIR_BPRINTER_LIB_SRCS)
INCLUDE_DIRECTORIES(./midifile/include)
INCLUDE_DIRECTORIES(./libusb/include/libusb-1.0)
INCLUDE_DIRECTORIES(./Intel-HEX-Class/intelhex_class)
INCLUDE_DIRECTORIES(./micronucleus_tool/library)
INCLUDE_DIRECTORIES(./micronucleus_tool)
INCLUDE_DIRECTORIES(./bprinter/include)

# add the executable
add_executable(midi-to-hex midi-to-hex.cpp NoteListProcessor.cpp ${DIR_MIDI_LIB_SRCS} ${DIR_HEX_LIB_SRCS} ${DIR_MICRONUCLEUS_SRCS} ${DIR_BPRINTER_LIB_SRCS} ${DIR_MICRONUCLEUS_LIB_SRCS})
target_link_libraries(midi-to-hex -lusb-1.0)
